--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.21.0",
     "express-handlebars": "^8.0.1",
+    "handlebars": "^4.7.8",
     "socket.io": "^4.7.5"
   }
 }
