--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
+    "mongoose-paginate-v2": "^1.8.5",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "socket.io": "^4.8.0"
