--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "mongoose-paginate-v2": "^1.8.5",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.0",
+    "twilio": "^5.5.1",
+    "uuid": "^11.1.0"
   }
 }
